utoipa-gen/tests/snapshots/schema_derive_test__derive_serde_flatten.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "allOf": [
    {
      "$ref": "#/components/schemas/Metadata"
    },
    {
      "properties": {
        "amount": {
          "format": "int64",
          "type": "integer"
        },
        "description": {
          "type": "string"
        }
      },
      "required": [
        "amount",
        "description"
      ],
      "type": "object"
    }
  ]
}
