utoipa-gen/tests/snapshots/schema_derive_test__derive_simple_enum_serde_skip.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 813
expression: value
---
{
  "enum": [
    "One",
    "Two"
  ],
  "type": "string"
}
