utoipa-gen/tests/snapshots/schema_derive_test__derive_simple_enum_serde_tag.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "tag": {
          "enum": [
            "A"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "tag": {
          "enum": [
            "B"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "tag": {
          "enum": [
            "C"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    }
  ]
}
