utoipa-gen/tests/snapshots/schema_derive_test__derive_simple_enum_serde_tag_with_flatten_content.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "allOf": [
        {
          "$ref": "#/components/schemas/Foo"
        },
        {
          "properties": {
            "tag": {
              "enum": [
                "One"
              ],
              "type": "string"
            }
          },
          "required": [
            "tag"
          ],
          "type": "object"
        }
      ]
    }
  ]
}
