utoipa-gen/tests/snapshots/schema_derive_test__derive_simple_enum_serde_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "default": null,
  "type": "null"
}
