utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_custom_rename.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "CREATED-AT": {
      "format": "int64",
      "type": "integer"
    },
    "POST-ID": {
      "format": "int64",
      "type": "integer"
    },
    "post_comment": {
      "type": "string"
    }
  },
  "required": [
    "POST-ID",
    "CREATED-AT",
    "post_comment"
  ],
  "type": "object"
}
