utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_inline_with_description.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: "&value"
---
{
  "properties": {
    "no_description_inline": {
      "properties": {
        "name": {
          "type": "string"
        }
      },
      "required": [
        "name"
      ],
      "type": "object"
    },
    "with_description": {
      "allOf": [
        {
          "properties": {
            "name": {
              "type": "string"
            }
          },
          "required": [
            "name"
          ],
          "type": "object"
        },
        {
          "description": "This is description",
          "type": "object"
        }
      ]
    }
  },
  "required": [
    "with_description",
    "no_description_inline"
  ],
  "type": "object"
}
