utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_option_with_deserialize_with_is_required.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: review
---
{
  "properties": {
    "app": {
      "type": [
        "string",
        "null"
      ]
    },
    "label": {
      "type": [
        "string",
        "null"
      ]
    },
    "note": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "app"
  ],
  "type": "object"
}
