utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_override_type_with_a_reference.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "field": {
      "$ref": "#/components/schemas/NewBar"
    }
  },
  "required": [
    "field"
  ],
  "type": "object"
}
